--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -46,6 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -66,13 +67,6 @@
       <Project>{90822264-fbc3-404f-84a3-e012ee1b6aca}</Project>
       <Name>DTO</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="QuanLyHocTap.mdf" />
-    <Content Include="QuanLyHocTap_log.ldf">
-      <DependentUpon>QuanLyHocTap.mdf</DependentUpon>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
