--- a/QuanLiHocTap/Web.config
+++ b/QuanLiHocTap/Web.config
@@ -15,8 +15,9 @@
       </sectionGroup>
     </configSections>  
 
-    <appSettings />
-    <connectionStrings />
+    <connectionStrings>
+    <add name="QLHH" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\QuanLyHocTap.mdf;Integrated Security=True"/>
+  </connectionStrings>
     <system.web>
         <compilation debug="true">
 
@@ -110,7 +111,4 @@
         </dependentAssembly>
       </assemblyBinding>
     </runtime>
-  <!--<connectionStrings>
-    <add name="QLHH" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=D:\hoc\PTTKPM\ZZZZZZZZ\QuanLiHocTap\QuanLiHocTap\QuanLiHocTap.mdf;Integrated Security=True;Connect Timeout=30"/>
-  </connectionStrings>--> 
 </configuration>
